# aqa_project

./: .gitignore  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
pages/: base_page.py  like_a_button.py  simple_button.py
tests/: test_button_page.py  test_look_like_a_button.py
