[tool.poetry]
name = "aqa-progect"
version = "0.1.0"
description = ""
authors = ["Tatyana Kharlamova <kharlamova2785@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
selenium = "^4.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
